# SDLEmscriptenTemplate

./: CMakeLists.txt  README.md
Game/src/: UnityBuild.cpp  main.cpp
cmake/: FindSDL2_mixer.cmake
web_build/: EmscriptenBuild.bat  index.html
